--- a/pppppp/View/AddFriendsView/AddFriendView.storyboard
+++ b/pppppp/View/AddFriendsView/AddFriendView.storyboard
@@ -1,111 +1,101 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="LYz-DZ-wCV">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
-        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Add Friend View Controller-->
-        <scene sceneID="psb-cV-hjE">
+        <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController id="LYz-DZ-wCV" customClass="AddFriendViewController" customModule="pppppp" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="UgX-6g-dW2">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                <viewController modalPresentationStyle="fullScreen" id="Y6W-OH-hqX" customClass="AddFriendViewController" customModule="pppppp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h2i-99-U3q">
-                                <rect key="frame" x="24" y="344" width="366" height="208"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qzA-A2-QDb">
-                                        <rect key="frame" x="108.5" y="140" width="149.5" height="48"/>
-                                        <color key="backgroundColor" red="0.72156862749999995" green="0.91372549020000005" blue="1" alpha="0.39926359519999999" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="149.5" id="JYO-JV-fue"/>
-                                            <constraint firstAttribute="height" constant="48" id="pPB-aQ-sqZ"/>
-                                        </constraints>
-                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="ADD AS FRIEND">
-                                            <fontDescription key="titleFontDescription" type="system" weight="heavy" pointSize="16"/>
-                                        </buttonConfiguration>
-                                        <connections>
-                                            <action selector="addFriend" destination="LYz-DZ-wCV" eventType="touchUpInside" id="j9o-JF-eBE"/>
-                                        </connections>
-                                    </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="----" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2v5-j6-HLp">
-                                        <rect key="frame" x="161.5" y="79" width="43" height="29"/>
-                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <color key="backgroundColor" red="0.4823529412" green="0.50980392159999999" blue="1" alpha="0.5" colorSpace="custom" customColorSpace="displayP3"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="morflax-studio-18" translatesAutoresizingMaskIntoConstraints="NO" id="H4C-zg-WFA">
+                                <rect key="frame" x="-33" y="63" width="520" height="507"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add Friend" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HR6-au-lWA">
+                                <rect key="frame" x="94" y="498" width="202" height="48"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="and" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WsS-q9-5ve">
+                                <rect key="frame" x="160" y="546" width="70" height="48"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Get Started !" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fPc-RC-B96">
+                                <rect key="frame" x="77" y="594" width="236" height="48"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ast-0b-UwW">
+                                <rect key="frame" x="40" y="698" width="138" height="72"/>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="qzA-A2-QDb" secondAttribute="bottom" constant="20" id="Imh-xZ-qee"/>
-                                    <constraint firstItem="qzA-A2-QDb" firstAttribute="centerX" secondItem="h2i-99-U3q" secondAttribute="centerX" id="KrU-Fe-Ds5"/>
-                                    <constraint firstItem="qzA-A2-QDb" firstAttribute="top" secondItem="2v5-j6-HLp" secondAttribute="bottom" constant="32" id="dUH-uV-CXT"/>
-                                    <constraint firstAttribute="height" constant="208" id="vPd-SG-qqu"/>
-                                    <constraint firstItem="2v5-j6-HLp" firstAttribute="centerX" secondItem="h2i-99-U3q" secondAttribute="centerX" id="vYD-bp-kpm"/>
-                                </constraints>
-                            </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Leb-HE-572">
-                                <rect key="frame" x="8" y="48" width="48" height="48"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="48" id="0jw-O5-OD6"/>
-                                    <constraint firstAttribute="width" constant="48" id="7Uk-yK-dCa"/>
+                                    <constraint firstAttribute="height" constant="72" id="k3g-5N-Fy8"/>
+                                    <constraint firstAttribute="width" constant="138" id="xMz-Xf-aVL"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="">
-                                    <imageReference key="image" image="xmark.circle" catalog="system" symbolScale="large"/>
-                                    <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="24" weight="light"/>
-                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Link" cornerStyle="capsule">
+                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="24"/>
                                 </buttonConfiguration>
                                 <connections>
-                                    <action selector="backButton" destination="LYz-DZ-wCV" eventType="touchUpInside" id="Imf-U7-iCC"/>
+                                    <action selector="linkButton" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Tqk-py-TXo"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="0TE-MI-7pn">
-                                <rect key="frame" x="167" y="304" width="80" height="79.5"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bk9-rt-Jp9">
+                                <rect key="frame" x="212" y="698" width="138" height="72"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="80" id="d3Y-it-GQ9"/>
-                                    <constraint firstAttribute="height" constant="80" id="qmJ-9G-hc7"/>
+                                    <constraint firstAttribute="height" constant="72" id="DGQ-vS-8in"/>
+                                    <constraint firstAttribute="width" constant="138" id="s4i-lX-k57"/>
                                 </constraints>
-                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" weight="ultraLight"/>
-                            </imageView>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="QRCode" cornerStyle="capsule">
+                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="24"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="qrCodeButton" destination="Y6W-OH-hqX" eventType="touchUpInside" id="kLV-Dq-dFv"/>
+                                </connections>
+                            </button>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="EgC-1K-tGS"/>
-                        <color key="backgroundColor" red="0.070588235294117646" green="0.0" blue="0.29803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
+                        <color key="backgroundColor" red="0.070588235294117646" green="0.0" blue="0.29803921568627451" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="0TE-MI-7pn" firstAttribute="top" secondItem="h2i-99-U3q" secondAttribute="top" constant="-40" id="Gvt-pw-H4t"/>
-                            <constraint firstItem="Leb-HE-572" firstAttribute="top" secondItem="EgC-1K-tGS" secondAttribute="top" id="QVd-by-paq"/>
-                            <constraint firstItem="h2i-99-U3q" firstAttribute="centerX" secondItem="UgX-6g-dW2" secondAttribute="centerX" id="Qee-vT-Ixk"/>
-                            <constraint firstItem="Leb-HE-572" firstAttribute="leading" secondItem="UgX-6g-dW2" secondAttribute="leading" constant="8" id="h8s-7O-X3f"/>
-                            <constraint firstItem="h2i-99-U3q" firstAttribute="centerY" secondItem="UgX-6g-dW2" secondAttribute="centerY" id="lfJ-7c-MVe"/>
-                            <constraint firstItem="0TE-MI-7pn" firstAttribute="centerX" secondItem="UgX-6g-dW2" secondAttribute="centerX" id="opE-ho-xPU"/>
-                            <constraint firstItem="h2i-99-U3q" firstAttribute="leading" secondItem="EgC-1K-tGS" secondAttribute="leading" constant="24" id="ptE-WH-g69"/>
-                            <constraint firstItem="EgC-1K-tGS" firstAttribute="trailing" secondItem="h2i-99-U3q" secondAttribute="trailing" constant="24" id="wGu-ZU-4eu"/>
+                            <constraint firstAttribute="trailing" secondItem="H4C-zg-WFA" secondAttribute="trailing" constant="-97" id="05a-f1-wSJ"/>
+                            <constraint firstItem="fPc-RC-B96" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="J44-fp-TAv"/>
+                            <constraint firstItem="WsS-q9-5ve" firstAttribute="top" secondItem="HR6-au-lWA" secondAttribute="bottom" id="L4I-b7-vcz"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="H4C-zg-WFA" secondAttribute="bottom" constant="240" id="OtR-5j-gQQ"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="ast-0b-UwW" secondAttribute="bottom" constant="40" id="P0E-fw-kgv"/>
+                            <constraint firstItem="HR6-au-lWA" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="SPu-s2-rIN"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="Bk9-rt-Jp9" secondAttribute="bottom" constant="40" id="TIS-4d-gMr"/>
+                            <constraint firstItem="ast-0b-UwW" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="40" id="U7R-MN-GZO"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="Bk9-rt-Jp9" secondAttribute="trailing" constant="40" id="Vj9-am-dzN"/>
+                            <constraint firstItem="fPc-RC-B96" firstAttribute="top" secondItem="WsS-q9-5ve" secondAttribute="bottom" id="Zih-oI-hxG"/>
+                            <constraint firstItem="H4C-zg-WFA" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leading" constant="-33" id="bSI-mI-wby"/>
+                            <constraint firstItem="H4C-zg-WFA" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="16" id="cvU-Kd-1Jw"/>
+                            <constraint firstItem="ast-0b-UwW" firstAttribute="top" secondItem="fPc-RC-B96" secondAttribute="bottom" constant="56" id="g7D-6M-KwY"/>
+                            <constraint firstItem="WsS-q9-5ve" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="uI1-jY-Fn3"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="addFriendButton" destination="qzA-A2-QDb" id="H4k-dW-hwz"/>
-                        <outlet property="backgroundView" destination="h2i-99-U3q" id="sZ5-3A-MEp"/>
-                        <outlet property="friendIconView" destination="0TE-MI-7pn" id="8nq-it-yZ3"/>
-                        <outlet property="friendLabel" destination="2v5-j6-HLp" id="Yhs-vP-XzM"/>
+                        <outlet property="linkButtonLayout" destination="ast-0b-UwW" id="0NL-hx-Qib"/>
+                        <outlet property="qrCodeButtonLayout" destination="Bk9-rt-Jp9" id="wV1-yL-wdr"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="i7N-SX-kQ5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2250.7246376811595" y="-224.33035714285714"/>
+            <point key="canvasLocation" x="49.230769230769226" y="-2.1327014218009479"/>
         </scene>
     </scenes>
     <resources>
-        <image name="person.circle" catalog="system" width="128" height="123"/>
-        <image name="xmark.circle" catalog="system" width="128" height="123"/>
+        <image name="morflax-studio-18" width="1605" height="1374"/>
     </resources>
 </document>
