--- a/pppppp/View/Friend&MeDataView/CreatePointView/HealthDataView.storyboard
+++ b/pppppp/View/Friend&MeDataView/CreatePointView/HealthDataView.storyboard
@@ -76,8 +76,39 @@
                                     <constraint firstItem="loL-8f-2LO" firstAttribute="top" secondItem="GYI-q8-w9F" secondAttribute="bottom" constant="16" id="xu1-gX-maV"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9Xv-kx-Zoh">
-                                <rect key="frame" x="24" y="304" width="366" height="176"/>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="SVz-Sw-HEj"/>
+                        <color key="backgroundColor" red="0.074509803920000006" green="0.0" blue="0.29803921570000003" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="bMI-by-4Vb" firstAttribute="leading" secondItem="SVz-Sw-HEj" secondAttribute="leading" constant="24" id="1hF-RT-8nW"/>
+                            <constraint firstItem="bMI-by-4Vb" firstAttribute="top" secondItem="SVz-Sw-HEj" secondAttribute="top" constant="40" id="WXa-aj-mat"/>
+                            <constraint firstItem="SVz-Sw-HEj" firstAttribute="trailing" secondItem="bMI-by-4Vb" secondAttribute="trailing" constant="24" id="kAK-Tb-vKy"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="enterExerciseBackgroundView" destination="9Xv-kx-Zoh" id="BZR-hX-fEI"/>
+                        <outlet property="enterWeightbackgroundView" destination="bMI-by-4Vb" id="thh-5Q-6ge"/>
+                        <outlet property="exerciseTimeTextField" destination="xTX-mp-TUU" id="Os5-Xe-ia3"/>
+                        <outlet property="saveExerciseButtonLayout" destination="jCv-IG-eh2" id="5Nj-7q-oGm"/>
+                        <outlet property="selectExerciseTextField" destination="NoX-SH-DcP" id="cdw-xS-JPx"/>
+                        <outlet property="weightTextField" destination="loL-8f-2LO" id="NVM-Kf-t6S"/>
+                        <outlet property="writeWeightDataButtonLayout" destination="62u-dQ-csJ" id="Llv-0f-qwV"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rSU-1W-kfG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2073.913043478261" y="428.57142857142856"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="szj-nR-kVh">
+            <objects>
+                <viewController id="Mak-DC-cK3" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="66O-PV-mwf">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9Xv-kx-Zoh">
+                                <rect key="frame" x="0.0" y="287" width="366" height="176"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter Exercise &amp; Time." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bbS-71-7GY">
                                         <rect key="frame" x="24" y="24" width="170" height="20"/>
@@ -96,7 +127,7 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                         <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                                     </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jCv-IG-eh2">
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jCv-IG-eh2">
                                         <rect key="frame" x="296" y="87" width="54" height="32"/>
                                         <color key="backgroundColor" red="0.52156862749999999" green="0.62745098040000002" blue="0.7725490196" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
@@ -146,38 +177,6 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="SVz-Sw-HEj"/>
-                        <color key="backgroundColor" red="0.074509803920000006" green="0.0" blue="0.29803921570000003" alpha="1" colorSpace="calibratedRGB"/>
-                        <constraints>
-                            <constraint firstItem="bMI-by-4Vb" firstAttribute="leading" secondItem="SVz-Sw-HEj" secondAttribute="leading" constant="24" id="1hF-RT-8nW"/>
-                            <constraint firstItem="SVz-Sw-HEj" firstAttribute="trailing" secondItem="9Xv-kx-Zoh" secondAttribute="trailing" constant="24" id="9Zw-At-PYG"/>
-                            <constraint firstItem="9Xv-kx-Zoh" firstAttribute="top" secondItem="bMI-by-4Vb" secondAttribute="bottom" constant="40" id="9wl-Wf-dAl"/>
-                            <constraint firstItem="bMI-by-4Vb" firstAttribute="top" secondItem="SVz-Sw-HEj" secondAttribute="top" constant="40" id="WXa-aj-mat"/>
-                            <constraint firstItem="SVz-Sw-HEj" firstAttribute="trailing" secondItem="bMI-by-4Vb" secondAttribute="trailing" constant="24" id="kAK-Tb-vKy"/>
-                            <constraint firstItem="9Xv-kx-Zoh" firstAttribute="leading" secondItem="SVz-Sw-HEj" secondAttribute="leading" constant="24" id="tZU-9z-nkP"/>
-                        </constraints>
-                    </view>
-                    <connections>
-                        <outlet property="enterExerciseBackgroundView" destination="9Xv-kx-Zoh" id="BZR-hX-fEI"/>
-                        <outlet property="enterWeightbackgroundView" destination="bMI-by-4Vb" id="thh-5Q-6ge"/>
-                        <outlet property="exerciseTimeTextField" destination="xTX-mp-TUU" id="Os5-Xe-ia3"/>
-                        <outlet property="saveExerciseButtonLayout" destination="jCv-IG-eh2" id="5Nj-7q-oGm"/>
-                        <outlet property="selectExerciseTextField" destination="NoX-SH-DcP" id="cdw-xS-JPx"/>
-                        <outlet property="weightTextField" destination="loL-8f-2LO" id="NVM-Kf-t6S"/>
-                        <outlet property="writeWeightDataButtonLayout" destination="62u-dQ-csJ" id="Llv-0f-qwV"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="rSU-1W-kfG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2073.913043478261" y="428.57142857142856"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="szj-nR-kVh">
-            <objects>
-                <viewController id="Mak-DC-cK3" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="66O-PV-mwf">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="zdg-u8-Cba"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
